--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
-JWT_SECRET_KEY=your_jwt_secret
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASS=your_app_password
-GEMINI_API_KEY=your_gemini_api_key
+JWT_SECRET_KEY=your_jwt_secret_aniket
+EMAIL_USER=aniketgawande130@gmail.com
+EMAIL_PASS=hzaz xusr cmuw ycfs
+GEMINI_API_KEY=AIzaSyAJlbXwlsKB-u2WWP14NLt4TvAK6DRFbuc
+MONGO_URI=mongodb+srv://aniketgawande130:vHNnWaIIC8AP9Vwx@cluster0.c5oganq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_DB=resumetric
